--- a/alura-tdd-django/animais/templates/index.html
+++ b/alura-tdd-django/animais/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Busca Animal</title>
 </head>
-<body>
+<body style="background-color: gray">
     <div style="background-color: orange">
     <a class="navbar">Busca Animal</a>
     <form>
-    <input type="text" id="buscar-animal" placeholder="Exemplo: leão" style="background-color: pink">
+    <input type="text" id="buscar-animal" placeholder="Exemplo: leão" name="buscar" style="background-color: pink">
     <button type="submit">Pesquisar</button>
     </form>
     <div class="result-description"> </div>
